use valueOf instead of the deprecated constructor for Integer
Former-commit-id: af01d0b9c2d89d0ca6ae0761867e350020936916