@@ -790,7 +790,7 @@ public class TextUtilities {
                         if (fullHTML) {
                             // Not 7 Bit use the unicode system
                             sb.append("&#");
-                            sb.append(new Integer(ci).toString());
+                            sb.append(Integer.valueOf(ci).toString());
                             sb.append(';');
                         } else
                             sb.append(c);
